List marker incorrectly positioned when list child has inline margin https://bugs.webkit.org/show_bug.cgi?id=279172 <rdar://problem/135332538>

Reviewed by Antti Koivisto.

Let's indent list marker with the start margin value when nested inside a block container.
(This is a side effect of us trying to find a container for the inline list marker renderer when
"sibling" box is not inline (e.g. block)).

It makes WebKit's list marker position match with both Blink and Gecko.

* LayoutTests/fast/inline/list-marker-inside-container-with-margin-expected.html: Added.
* LayoutTests/fast/inline/list-marker-inside-container-with-margin.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationBoxGeometryUpdater.cpp:
(WebCore::LayoutIntegration::BoxGeometryUpdater::updateListMarkerDimensions):

Canonical link: https://commits.webkit.org/283289@main